0.007 15-02-2012
  - Be more paranoid about the potential for $_ being clobbered.

0.006 05-07-2011
  - Change to use Class::Load, rather than Class::MOP::load_class

0.005 22-06-2010
  - Fix required version of MooseX::Types.

0.004 14-05-2010
  - Add a LoadableRole type.

0.003 12-05-2010
  - 'ClassName' is now exactly the same as 'LoadableClass', so that old code
    still works if you use a custom type map of 'LoadableClass' for
    MX::Storage/Kioku etc.
    (Note that they should normally work anyway with a default type map, as
    they subtype ClassName which subtypes Str)

0.002 12-05-2010
  - Change the name to 'LoadableClass' as this is what people expect.
    The old 'ClassName' export is still present for backwards compatibility,
    but no longer documented.

0.001 03-03-2010
  - Initial version.
